objects/ID_Cards__c.object
<CustomObject>
    <fields>
        <fullName>Is_Production_ID_Cards_Applicable__c</fullName>
        <label>Is Production ID Cards Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Production_ID_Cards_P1_Applicable__c</fullName>
        <label>Is Production ID Cards P1 Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Production_ID_Cards_P2_Applicable__c</fullName>
        <label>Is Production ID Cards P2 Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Production_ID_Cards_P3_Applicable__c</fullName>
        <label>Is Production ID Cards P3 Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_There_Member_Exception__c</fullName>
        <label>Is There Member Exception</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_There_an_EPO_Gatekeeper__c</fullName>
        <label>Is There an EPO Gatekeeper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, In Network Only</fullName>
                </value>
                <value>
                    <fullName>Yes, In and Out of Network</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JAA_Group__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.JAA_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JAA Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoggedInUserProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedInUserProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedinProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedinProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCS_Group__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.MCS_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCS Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Level_ID_Card__c</fullName>
        <label>Member Level ID Card</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Approved__c</fullName>
        <label>Membership Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Stage__c</fullName>
        <formula>TEXT(Membership__r.Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Membership</label>
        <referenceTo>Enrollment_and_Billing__c</referenceTo>
        <relationshipLabel>ID Cards</relationshipLabel>
        <relationshipName>ID_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mockup_Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mockup Auditor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ID_Cards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mockups_Revision_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mockups Revision Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mockups_Sent_For_Approval__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mockups Sent For Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Test_Cards_Approved__c</fullName>
        <label>Number of Test Cards Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Test_Cards_Reviewed__c</fullName>
        <label>Number of Test Cards Reviewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Status_Comments_Customized__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Overall Status Comments(Customized)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Status_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Overall Status Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Fullname__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName + Owner:Queue.QueueName</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P1_Actual_ID_Counts__c</fullName>
        <label>P1 Actual ID Counts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P1_Date_Changes_Moved_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P1 Date Changes Moved To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P1_Date_ID_Card_Ordered__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P1 Date ID Card Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P1_Date_Of_First_Mailing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P1 Date Of First Mailing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P1_Date_Of_ID_BA_Prod_Audit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P1 Date Of ID BA Prod Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P1_Date_Of_Imp_Sales_RA_Prod_Audit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P1 Date Of Imp/Sales/RA Prod Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P1_Date_Of_Last_Mailing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P1 Date Of Last Mailing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P1_Date_PSI_Hold_Removed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P1 Date PSI Hold Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P1_Date_Suppressed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P1 Date Suppressed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P1_Date_Suppression_Removed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P1 Date Suppression Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P1_Date_Vendor_Hold_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P1 Date Vendor Hold Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P1_Digital_ID_Counts__c</fullName>
        <label>P1 Digital ID Counts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P1_Job_ID_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P1 Job ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P1_Number_of_Imps_Prod_Card_Approved__c</fullName>
        <label>P1 Number of Imps Prod Card Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P1_Number_of_Imps_Prod_Card_Audited__c</fullName>
        <label>P1 Number of Imps Prod Card Audited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P1_Overall_Status_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P1 Overall Status Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P2_Actual_ID_Counts__c</fullName>
        <label>P2 Actual ID Counts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2_Date_Changes_Moved_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P2 Date Changes Moved To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P2_Date_ID_Card_Ordered__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P2 Date ID Card Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P2_Date_Of_First_Mailing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P2 Date Of First Mailing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P2_Date_Of_ID_BA_Prod_Audit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P2 Date Of ID BA Prod Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P2_Date_Of_Imp_Sales_RA_Prod_Audit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P2 Date Of Imp/Sales/RA Prod Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P2_Date_Of_Last_Mailing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P2 Date Of Last Mailing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P2_Date_PSI_Hold_Removed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P2 Date PSI Hold Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P2_Date_Suppressed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P2 Date Suppressed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P2_Date_Suppression_Removed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P2 Date Suppression Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P2_Date_Vendor_Hold_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P2 Date Vendor Hold Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P2_Digital_ID_Counts__c</fullName>
        <label>P2 Digital ID Counts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2_Job_ID_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P2 Job ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2_Number_of_Imps_Prod_Card_Approved__c</fullName>
        <label>P2 Number of Imps Prod Card Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2_Number_of_Imps_Prod_Card_Audited__c</fullName>
        <label>P2 Number of Imps Prod Card Audited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2_Overall_Status_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P2 Overall Status Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P3_Actual_ID_Counts__c</fullName>
        <label>P3 Actual ID Counts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P3_Date_Changes_Moved_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P3 Date Changes Moved To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P3_Date_ID_Card_Ordered__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P3 Date ID Card Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P3_Date_Of_First_Mailing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P3 Date Of First Mailing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P3_Date_Of_ID_BA_Prod_Audit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P3 Date Of ID BA Prod Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P3_Date_Of_Imp_Sales_RA_Prod_Audit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P3 Date Of Imp/Sales/RA Prod Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P3_Date_Of_Last_Mailing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P3 Date Of Last Mailing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P3_Date_PSI_Hold_Removed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P3 Date PSI Hold Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P3_Date_Suppressed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P3 Date Suppressed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P3_Date_Suppression_Removed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P3 Date Suppression Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P3_Date_Vendor_Hold_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P3 Date Vendor Hold Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P3_Digital_ID_Counts__c</fullName>
        <label>P3 Digital ID Counts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P3_Job_ID_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P3 Job ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P3_Number_of_Imps_Prod_Card_Approved__c</fullName>
        <label>P3 Number of Imps Prod Card Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P3_Number_of_Imps_Prod_Card_Audited__c</fullName>
        <label>P3 Number of Imps Prod Card Audited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P3_Overall_Status_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P3 Overall Status Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMS_Swatch__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PMS Swatch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peer_ID_Card_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Peer ID Card Requirement Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ID_Cards5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Peer_ID_Card_Mockup_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Peer ID Card Mockup Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ID_Cards6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PendingCorrectionAction__c</fullName>
        <formula>IF(AND(OR(LoggedinProfile__c ==&apos;SME&apos;,LoggedinProfile__c ==&apos;SME Dual&apos;,LoggedinProfile__c ==&apos;Specialty Post Sales&apos;, LoggedinProfile__c ==&apos;Specialty Post Sales Dual&apos;), Tech_Support_ID_Cards__c== False),&apos;Y&apos;,&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PendingCorrectionAction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Time__c</fullName>
        <label>Pending Correction Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Corrections_Stage__c</fullName>
        <description>This field fetches the associated Pending Correction&apos;s Stage.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Corrections Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Guarentee_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Performance Guarantee Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Guarentee_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Performance Guarantee Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Implementation_Tracking_ID__r.Region__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Type_Details_Customized__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requested Type Details(Customized)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revisions_To_Mockups__c</fullName>
        <label>Revisions To Mockups</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_email_to_AM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a backend field used in a workflow rule</description>
        <label>Send email to AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <formula>Implementation_Tracking_ID__r.Situs_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01 Not Started</fullName>
                    <default>true</default>
                    <label>01 Not Started</label>
                </value>
                <value>
                    <fullName>02 In Progress</fullName>
                </value>
                <value>
                    <fullName>03 Pending Approval to Trigger</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction Returned</fullName>
                </value>
                <value>
                    <fullName>04 Approved</fullName>
                </value>
                <value>
                    <fullName>04 ID Card Re-triggered</fullName>
                </value>
                <value>
                    <fullName>04 ID Card Triggered</fullName>
                </value>
                <value>
                    <fullName>04 Pending Card Review</fullName>
                </value>
                <value>
                    <fullName>04 Pending ID Card Review - Done</fullName>
                </value>
                <value>
                    <fullName>04 Pending Mail Date</fullName>
                </value>
                <value>
                    <fullName>05 Rejected</fullName>
                    <label>05 ID Cards not Needed</label>
                </value>
                <value>
                    <fullName>05 Withdrawn</fullName>
                </value>
                <value>
                    <fullName>04-Pending Card Review</fullName>
                    <isActive>false</isActive>
                    <label>04-Pending Card Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suppressed_ID_Card_Required__c</fullName>
        <inlineHelpText>Suppression in WGS stops a card from triggering out of WGS</inlineHelpText>
        <label>Suppressed ID Card Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Support_ID_Cards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Support ID Cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_Ready_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Trigger Ready Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_Of_Logo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type Of Logo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ID_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Website_To_Be_Listed_On_ID_Card__c</fullName>
        <label>Website To Be Listed On ID Card</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Anthem.com</fullName>
                </value>
                <value>
                    <fullName>Standard bcbsga.com (WGS only)</fullName>
                </value>
                <value>
                    <fullName>Custom Microsite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ID Cards</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>ID_Card_Overall_Status__c</columns>
        <columns>Owner_Fullname__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Custom_ID_Card_Required__c</columns>
        <columns>Membership_Approved__c</columns>
        <columns>Suppressed_ID_Card_Required__c</columns>
        <columns>ID_Card_Hold_Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_ID_Cards_Key_Account</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Case_Name__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Owner_Fullname__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_Of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All ID Cards - Key Account</label>
    </listViews>
    <listViews>
        <fullName>ID_Cards_Local</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Case_Name__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>ID_Card_Overall_Status__c</columns>
        <columns>Owner_Fullname__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Custom_ID_Card_Required__c</columns>
        <columns>Suppressed_ID_Card_Required__c</columns>
        <columns>ID_Card_Hold_Required__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Trigger_Ready_Date__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <label>ID Cards - Local</label>
        <queue>ID_Cards_Local</queue>
    </listViews>
    <listViews>
        <fullName>ID_Cards_National_ID_Cards</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Case_Name__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number_impTracking__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>ID_Card_Overall_Status1__c</columns>
        <columns>Owner_Fullname__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <filterScope>Queue</filterScope>
        <label>ID Cards - National</label>
        <queue>ID_Cards_National</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Local_Assigned_ID_CA</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Case_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Region__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer_Name__c</columns>
        <columns>Owner_Fullname__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Custom_ID_Card_Required__c</columns>
        <columns>ID_Cards_Triggered__c</columns>
        <columns>ID_Card_Order_Re_triggered_Date__c</columns>
        <columns>ID_card_Approved_Date__c</columns>
        <columns>Date_Of_First_Mailing__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>California</value>
        </filters>
        <filters>
            <field>Date_Of_First_Mailing__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>contains</operation>
            <value>02 In Progress,03 Pending Approval to Trigger,03 Pending Correction,03 Pending Correction Returned,04 Approved,04 ID Card Re-triggered,04 ID Card Triggered,05 Rejected</value>
        </filters>
        <label>Local Assigned ID CA</label>
    </listViews>
    <listViews>
        <fullName>Local_Assigned_ID_CO</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Case_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Region__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer_Name__c</columns>
        <columns>Owner_Fullname__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Custom_ID_Card_Required__c</columns>
        <columns>ID_Cards_Triggered__c</columns>
        <columns>ID_Card_Order_Re_triggered_Date__c</columns>
        <columns>ID_card_Approved_Date__c</columns>
        <columns>Date_Of_First_Mailing__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Colorado</value>
        </filters>
        <filters>
            <field>Date_Of_First_Mailing__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>contains</operation>
            <value>02 In Progress,03 Pending Approval to Trigger,03 Pending Correction,03 Pending Correction Returned,04 Approved,04 ID Card Re-triggered,04 ID Card Triggered,05 Rejected</value>
        </filters>
        <label>Local Assigned ID CO</label>
    </listViews>
    <listViews>
        <fullName>Local_Assigned_ID_CT</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Case_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Region__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer_Name__c</columns>
        <columns>Owner_Fullname__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Custom_ID_Card_Required__c</columns>
        <columns>ID_Cards_Triggered__c</columns>
        <columns>ID_Card_Order_Re_triggered_Date__c</columns>
        <columns>ID_card_Approved_Date__c</columns>
        <columns>Date_Of_First_Mailing__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Connecticut</value>
        </filters>
        <filters>
            <field>Date_Of_First_Mailing__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>contains</operation>
            <value>02 In Progress,03 Pending Approval to Trigger,03 Pending Correction,03 Pending Correction Returned,04 Approved,04 ID Card Re-triggered,04 ID Card Triggered,05 Rejected</value>
        </filters>
        <label>Local Assigned ID CT</label>
    </listViews>
</CustomObject>